--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,7 @@
-flask
-psycopg2
-opencv-python
-werkzeug
+flask==2.3.3
+psycopg2-binary==2.9.7
+werkzeug==2.3.7
+python-dotenv==1.0.0
+cryptography==41.0.4
+bcrypt==4.0.1
+email-validator==2.0.0
